# pidogMCP

./: .gitignore  README.md  main.py  pyproject.toml
pidogmcp/: __init__.py  server.py
src/: pidog_mcp.py  time_service.py
